...
        animation.repeatCount = 3
        animation.autoreverses = true
        animation.fromValue = NSValue(CGPoint: CGPointMake(display.center.x - 10, display.center.y))
        animation.toValue = NSValue(CGPoint: CGPointMake(display.center.x + 10, display.center.y))
        CATransaction.setCompletionBlock { () -> Void in
            self.enteredCode = ""  // clear label
            self.message.text = "*PLEASE ENTER THE CORRECT CODE*"
        }
        display.layer.addAnimation(animation, forKey: "position")
        CATransaction.commit()
    }

    
...
