...
                    dispatch_async(dispatch_get_main_queue(), { () -> Void in
                        self.performSegueWithIdentifier("Show Confirmation", sender: self)
                    })
                }
            }
        } else {
            animateOnError("*PLEASE ENTER A VALID PHONE NUMBER*")
        }
    }

    var enteredDigits: String {
        get {
            return display.text!.stringByReplacingOccurrencesOfString(" ", withString: "")
...
